fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@
   filter: invert(1) hue-rotate(180deg);
 }
 
+main {
+  overflow-x: hidden;
+}
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
